{
  "version": 4,
  "terraform_version": "1.1.1",
  "serial": 670,
  "lineage": "a40b605d-f478-9998-4666-a3808dc0d0f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816953616995:loadbalancer/app/project-alb/8ee84c97c84f90cf",
            "arn_suffix": "app/project-alb/8ee84c97c84f90cf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "project-alb-466978360.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:816953616995:loadbalancer/app/project-alb/8ee84c97c84f90cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0da8eacd24fcd1552"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0154bcfcca203f815"
              },
              {
                "subnet_id": "subnet-08f310cb9d537a032"
              },
              {
                "subnet_id": "subnet-0d64772009d92e0b4"
              }
            ],
            "subnets": [
              "subnet-0154bcfcca203f815",
              "subnet-08f310cb9d537a032",
              "subnet-0d64772009d92e0b4"
            ],
            "vpc_id": "vpc-0b4a52db4d9586131",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.Project",
            "aws_security_group.my_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816953616995:listener/app/project-alb/8ee84c97c84f90cf/7d7d0046c8230850",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:816953616995:targetgroup/project-tg/f45a426f3cca1465",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:816953616995:listener/app/project-alb/8ee84c97c84f90cf/7d7d0046c8230850",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:816953616995:loadbalancer/app/project-alb/8ee84c97c84f90cf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public3",
            "aws_vpc.Project",
            "aws_alb.application-lb",
            "aws_alb_target_group.project-tg",
            "aws_security_group.my_sg",
            "aws_subnet.public1",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "project-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816953616995:targetgroup/project-tg/f45a426f3cca1465",
            "arn_suffix": "targetgroup/project-tg/f45a426f3cca1465",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:816953616995:targetgroup/project-tg/f45a426f3cca1465",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "project-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Projecteip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02af34044c8595d3d",
            "association_id": "eipassoc-089119241cd6d3290",
            "domain": "vpc",
            "id": "eipalloc-02af34044c8595d3d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bb44c10895d5c33f",
            "private_dns": "ip-10-0-1-204.ec2.internal",
            "private_ip": "10.0.1.204",
            "public_dns": "ec2-44-208-213-89.compute-1.amazonaws.com",
            "public_ip": "44.208.213.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ProjectEIP"
            },
            "tags_all": {
              "Name": "ProjectEIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a0ae173da5807d3",
            "arn": "arn:aws:ec2:us-east-1:816953616995:instance/i-09096e6f9aba4f879",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09096e6f9aba4f879",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0065bbf3d12b05bf6",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_ip": "44.202.183.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08d2a94c079afeb9d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f310cb9d537a032",
            "tags": {
              "Name": "wordpress"
            },
            "tags_all": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05bd7f1784acb2eb2"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-ec2",
            "aws_subnet.public1",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ProjectIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:internet-gateway/igw-0d3c2c252ea7995e7",
            "id": "igw-0d3c2c252ea7995e7",
            "owner_id": "816953616995",
            "tags": {
              "Name": "ProjectIGW"
            },
            "tags_all": {
              "Name": "ProjectIGW"
            },
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02af34044c8595d3d",
            "association_id": "eipassoc-089119241cd6d3290",
            "connectivity_type": "public",
            "id": "nat-019053786ca22f395",
            "network_interface_id": "eni-0bb44c10895d5c33f",
            "private_ip": "10.0.1.204",
            "public_ip": "44.208.213.89",
            "subnet_id": "subnet-08f310cb9d537a032",
            "tags": {
              "Name": "NATGW"
            },
            "tags_all": {
              "Name": "NATGW"
            }
          },
          "dependencies": [
            "aws_eip.Projecteip",
            "aws_subnet.public1",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04611d7f3de105e7d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019053786ca22f395",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04611d7f3de105e7d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Projecteip",
            "aws_nat_gateway.NATgw",
            "aws_route_table.private_subnet_rt",
            "aws_subnet.public1",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:route-table/rtb-04611d7f3de105e7d",
            "id": "rtb-04611d7f3de105e7d",
            "owner_id": "816953616995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019053786ca22f395",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteNG"
            },
            "tags_all": {
              "Name": "RouteNG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:route-table/rtb-081edc46b73d7686d",
            "id": "rtb-081edc46b73d7686d",
            "owner_id": "816953616995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3c2c252ea7995e7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteIG"
            },
            "tags_all": {
              "Name": "RouteIG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ProjectIGW",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fc5764b209ab1ff",
            "route_table_id": "rtb-04611d7f3de105e7d",
            "subnet_id": "subnet-0d4e7ee86294cedb8"
          },
          "dependencies": [
            "aws_route_table.private_subnet_rt",
            "aws_subnet.private1",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e041f6034c94d00",
            "route_table_id": "rtb-04611d7f3de105e7d",
            "subnet_id": "subnet-010c0672e42101c33"
          },
          "dependencies": [
            "aws_route_table.private_subnet_rt",
            "aws_subnet.private2",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee4fe8bdbf7d276a",
            "route_table_id": "rtb-04611d7f3de105e7d",
            "subnet_id": "subnet-0c5704c65a3ca9c36"
          },
          "dependencies": [
            "aws_route_table.private_subnet_rt",
            "aws_subnet.private3",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8aeac030848b740",
            "route_table_id": "rtb-081edc46b73d7686d",
            "subnet_id": "subnet-08f310cb9d537a032"
          },
          "dependencies": [
            "aws_subnet.public1",
            "aws_vpc.Project",
            "aws_internet_gateway.ProjectIGW",
            "aws_route_table.public_subnet_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026f9d31a92cde150",
            "route_table_id": "rtb-081edc46b73d7686d",
            "subnet_id": "subnet-0d64772009d92e0b4"
          },
          "dependencies": [
            "aws_vpc.Project",
            "aws_internet_gateway.ProjectIGW",
            "aws_route_table.public_subnet_rt",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c848c34ba30c24f",
            "route_table_id": "rtb-081edc46b73d7686d",
            "subnet_id": "subnet-0154bcfcca203f815"
          },
          "dependencies": [
            "aws_internet_gateway.ProjectIGW",
            "aws_route_table.public_subnet_rt",
            "aws_subnet.public3",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:security-group/sg-0b8d1e847b0408ecd",
            "description": "Allow MySQL access from EC2 instance",
            "egress": [],
            "id": "sg-0b8d1e847b0408ecd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "816953616995",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:security-group/sg-0da8eacd24fcd1552",
            "description": "Allow incoming HTTP Connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da8eacd24fcd1552",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http from everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_sg",
            "name_prefix": "",
            "owner_id": "816953616995",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg"
            },
            "tags_all": {
              "Name": "my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:security-group/sg-05bd7f1784acb2eb2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bd7f1784acb2eb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-ec2",
            "name_prefix": "",
            "owner_id": "816953616995",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:subnet/subnet-0d4e7ee86294cedb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4e7ee86294cedb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816953616995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private1"
            },
            "tags_all": {
              "Name": "Private1"
            },
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:subnet/subnet-010c0672e42101c33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010c0672e42101c33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816953616995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private2"
            },
            "tags_all": {
              "Name": "Private2"
            },
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:subnet/subnet-0c5704c65a3ca9c36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5704c65a3ca9c36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816953616995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private3"
            },
            "tags_all": {
              "Name": "Private3"
            },
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:subnet/subnet-08f310cb9d537a032",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f310cb9d537a032",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816953616995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public1"
            },
            "tags_all": {
              "Name": "Public1"
            },
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:subnet/subnet-0d64772009d92e0b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d64772009d92e0b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816953616995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public2"
            },
            "tags_all": {
              "Name": "Public2"
            },
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:subnet/subnet-0154bcfcca203f815",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0154bcfcca203f815",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816953616995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public3"
            },
            "tags_all": {
              "Name": "Public3"
            },
            "vpc_id": "vpc-0b4a52db4d9586131"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816953616995:vpc/vpc-0b4a52db4d9586131",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097a944b07e7192e9",
            "default_route_table_id": "rtb-093b71f3cad04f8fe",
            "default_security_group_id": "sg-068e01c2b52d8118c",
            "dhcp_options_id": "dopt-0fc5a284a4541dbb1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4a52db4d9586131",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093b71f3cad04f8fe",
            "owner_id": "816953616995",
            "tags": {
              "Name": "Project"
            },
            "tags_all": {
              "Name": "Project"
            }
          }
        }
      ]
    }
  ]
}